--- a/about.html
+++ b/about.html
@@ -9,22 +9,22 @@ header-mask: 0.6
 <div class="en post-container">
 
 
-    <p><strong>nguyenda.com</strong> là trang blog chia sẻ về kiến thức, kinh nghiệm về phát triển phần mềm</p>
+    <p><strong>nguyenda.com</strong> is a blog that shares knowledge and experience about information technology, especially software development</p>
 
-    <p><strong>Nội dung</strong></p>
+    <p><strong>I focus on some content </strong></p>
     <ul>
-        <li>Quy trình phát triển phần mềm</li>
-        <li>Xây dựng phần mềm
+        <li>Software development process</li>
+        <li>Software construction
             <ul>
-                <li>Thiết kế tổng thể & chi tiết phần mềm</li>
-                <li>Xây dựng phần mềm</li>
+                <li>Overall design & software details</li>
+                <li>Software construction</li>
             </ul>
         </li>
-        <li>Vận hành phần mềm</li>
-        <li>Công cụ sử dụng trong quá trình xây dựng phần mềm</li>
-        <li>Một số tiện ích, nền tảng hay dùng</li>
-        <li>Tip tối ưu hệ thống/phần mềm</li>
-        <li>Xu hướng phát triển phần mềm</li>
+        <li>Software operation</li>
+        <li>Tools used in the software construction process</li>
+        <li>Some commonly used utilities and platforms</li>
+        <li>System/software optimization tips</li>
+        <li>Software development trends</li>
         <li>...</li>
     </ul>
 
