--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "Software development blog."
+description: "nguyenda.com - Software development blog."
 ---
 
 {% for post in paginator.posts %}
