--- a/logo.html
+++ b/logo.html
@@ -1,12 +1,12 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <link href="https://fonts.cdnfonts.com/css/broadway" rel="stylesheet">
+---
+layout: blank
+---
+
+
+
+<link href="https://fonts.cdnfonts.com/css/broadway" rel="stylesheet">
 <style>
 
-html {
-	font-family: Georgia, Times, "Times New Roman", serif; 
-}
 
 #logo{
     font-family: 'Broadway', sans-serif;
@@ -23,8 +23,7 @@ html {
 	font-weight: 700; 
 }
 </style>
-</head>
-<body>
+
 
 <div id="logo">nguyenda.com</div>
 
@@ -42,6 +41,3 @@ html {
 
 <p class="b">This is a paragraph. The font is set to italic and bold, with small-caps (all lowercase letters are converted to uppercase). The font size is set to 12 pixels, the line height is set to 30 pixels, and the font family is Georgia.</p>
 
-
-</body>
-</html>
