--- a/offline.html
+++ b/offline.html
@@ -1,10 +1,9 @@
 ---
 layout: default
-description: "网络似乎出现了问题 😥"
+description: "There seems to be a problem with the network 😥"
 header-img: "img/404-bg.jpg"
-permalink: /offline.html
+permalink: /offline
 ---
-
 
 <!-- Page Header -->
 <header class="intro-header" style="background-image: url('{{ site.baseurl }}/{% if page.header-img %}{{ page.header-img }}{% else %}{{ site.header-img }}{% endif %}')">
