--- a/offline.html
+++ b/offline.html
@@ -2,7 +2,7 @@
 layout: default
 description: "There seems to be a problem with the network 😥"
 header-img: "img/404-bg.jpg"
-permalink: /offline
+permalink: /offline.html
 ---
 
 <!-- Page Header -->
