--- a/tool.html
+++ b/tool.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: "Tools"
-description: "https://www.nguyenda.com"
+title: "Software tools"
+description: "Tools for software development"
 header-img: img/bg/toolbg.png
 header-mask: 0.6
 ---
