--- a/tools/qr/read.html
+++ b/tools/qr/read.html
@@ -1,9 +1,11 @@
 ---
-layout: tool
-title: "Read QR"
-description: "Read QR Image, parse to QR String and detect payment information"
+layout:     tool
+title:      Read QR
+subtitle:   Read QR Image, parse to QR String and detect payment information
 header-img: img/bg/toolbg.png
 header-mask: 0.6
+tags:
+    - qr_code
 ---
 
   <script src="./js/jsQR.js"></script>
