--- a/tool.html
+++ b/tool.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: "Software tools"
+title: "Tools"
 description: "Tools for software development"
 header-img: img/bg/toolbg.png
 header-mask: 0.6
