--- a/tool.html
+++ b/tool.html
@@ -14,7 +14,7 @@ header-mask: 0.6
         <li>Charater Tools</li>
         <li>Encrypt/Decrypt Tools</li>
         <li>Images Tools</li>
-        <li><a href="/tools/qr/read.html">QR Tools</a></li>
+        <li><a href="/tools/qr/read">QR Tools</a></li>
         <li>...</li>
     </ul>
 </div>
