--- a/tools/qr/read.html
+++ b/tools/qr/read.html
@@ -1,6 +1,6 @@
 ---
 layout: 		tool
-name:			"Read QR"
+title:			"Read QR"
 description: 	"Read QR Image, parse to QR String and detect payment information"
 header-img: 	img/bg/toolbg.png
 header-mask: 	0.6
