--- a/tools/qr/read.html
+++ b/tools/qr/read.html
@@ -7,15 +7,15 @@ header-mask: 	0.6
 ---
 <!-- Page Header -->
 
-<script src="../js/jsQR.js"></script>
-<script src="./js/promptparse"></script>
-<script src="./js/utf8.js"></script>
+<script src="/tools/qr/js/jsQR.js"></script>
+<script src="/tools/qr/js/promptparse"></script>
+<script src="/tools/qr/js/utf8.js"></script>
 <script type="module">
-import utf8 from "./js/utf8.js";
+import utf8 from "/tools/qr/js/utf8.js";
 </script>
-<script src="./js/crc.js"></script>
-<script src="./js/scheme.js"></script>
-<script src="./js/emvqr.js"></script>
+<script src="/tools/qr/js/crc.js"></script>
+<script src="/tools/qr/js/scheme.js"></script>
+<script src="/tools/qr/js/emvqr.js"></script>
 
   <style>
     
