update qr tools

--- a/tools/qr/read.html
+++ b/tools/qr/read.html
@@ -8,15 +8,12 @@ header-mask: 	0.6
 <!-- Page Header -->
 
 <script src="/tools/qr/js/jsQR.js"></script>
-<script src="/tools/qr/js/promptparse"></script>
+<script src="/tools/qr/js/promptparse.js"></script>
 <script src="/tools/qr/js/utf8.js"></script>
-<script type="module">
-import utf8 from "/tools/qr/js/utf8.js";
-</script>
 <script src="/tools/qr/js/crc.js"></script>
 <script src="/tools/qr/js/scheme.js"></script>
 <script src="/tools/qr/js/emvqr.js"></script>
-<script src="js/jsontree.js"></script>
+<script src="/tools/qr/js/jsontree.js"></script>
 
   <style>
     
