--- a/game/index.html
+++ b/game/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bảng event survivor - Clan VNClub</title>
-    <h1 style="text-align: center;" ;>Crown Pair Match - VNClub</h1>
+    <title>2nd anniversary</title>
+    <h1 style="text-align: center;" ;>2nd Anniversary - Survivor.io</h1>
     <style>
         table {
             width: 300px;
