--- a/pdf_privacy.html
+++ b/pdf_privacy.html
@@ -7,8 +7,25 @@ header-img: "img/tag-bg.jpg"
 
 <!-- Page Header -->
 
+<header class="intro-header" style="background-image: url('{{ site.baseurl }}/{% if page.header-img %}{{ page.header-img }}{% else %}{{ site.header-img }}{% endif %}')">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+                <div class="site-heading" id="tag-heading">
+                    <h1>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</h1>
+                    <span class="subheading">{{ page.description }}</span>
+                </div>
+            </div>
+        </div>
+    </div>
+</header>
 
-<strong>Privacy Policy</strong>
+<!-- Main Content -->
+<div class="container">
+	<div class="row">
+		<div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+
+			<strong>Privacy Policy</strong>
 <p>This privacy policy applies to the NoAD PDF app (hereby referred to as "Application") for mobile devices that was
 	created by NoAD (hereby referred to as "Service Provider") as a Free service. This service is intended for use "AS
 	IS".</p><br><strong>What information does the Application obtain and how is it used?</strong>
@@ -45,3 +62,6 @@ header-img: "img/tag-bg.jpg"
 <p>If you have any questions regarding privacy while using the Application, or have questions about the practices,
 	please contact the Service Provider via email at nguyenda.com.</p>
 <hr>
+		</div>
+	</div>
+</div>
