update file icon

--- a/tools/json/index.html
+++ b/tools/json/index.html
@@ -616,7 +616,7 @@
             }
         }
     </style>
-    <link rel="stylesheet" id="bootstrapThemeCss" href="https://www.nguyenda.com/tools/json/js/bootstrap.dark.min.css"
+    <link rel="stylesheet" id="bootstrapThemeCss" href="https://www.nguyenda.com/tools/json/css/bootstrap.dark.min.css"
         media="print" onload="this.media='all'">
     <noscript>
         <link rel="stylesheet" href="assets/css/bootstrap.dark.min.css">
@@ -1019,12 +1019,12 @@
             font-weight: 900
         }
     </style>
-    <link rel="stylesheet" href="https://www.nguyenda.com/tools/json/js/fontawesome.css" media="print"
+    <link rel="stylesheet" href="https://www.nguyenda.com/tools/json/css/fontawesome.css" media="print"
         onload="this.media='all'">
     <noscript>
-        <link rel="stylesheet" href="https://www.nguyenda.com/tools/json/js/fontawesome.css">
+        <link rel="stylesheet" href="https://www.nguyenda.com/tools/json/css/fontawesome.css">
     </noscript>
-    <link rel="stylesheet" href="https://www.nguyenda.com/tools/json/js/styles.css?v=1">
+    <link rel="stylesheet" href="https://www.nguyenda.com/tools/json/css/styles.css?v=1">
     <script>
         var ace = null;
     </script>
@@ -1082,9 +1082,10 @@
             width: 35px !important
         }
     </style>
-    <link rel="stylesheet" href="https://www.nguyenda.com/tools/json/js/styles.6b0d09783f627c0c.css" media="print"
-        onload="this.media='all'"><noscript>
-        <link rel="stylesheet" href="https://www.nguyenda.com/tools/json/js/styles.6b0d09783f627c0c.css">
+    <link rel="stylesheet" href="https://www.nguyenda.com/tools/json/css/styles.6b0d09783f627c0c.css" media="print"
+        onload="this.media='all'">
+    <noscript>
+        <link rel="stylesheet" href="https://www.nguyenda.com/tools/json/css/styles.6b0d09783f627c0c.css">
     </noscript>
     <style ng-transition="serverApp">
         .json-grid-editor-container[_ngcontent-sc16] {
