--- a/tools/json/index.html
+++ b/tools/json/index.html
@@ -3,14 +3,14 @@
 
 <head>
     <meta charset="utf-8">
-    <title>JsonGrid - All-In-One JSON Solution</title>
+    <title>Json Tool - NDA</title>
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <meta name="description"
         content="Online JSON Viewer - Convert JSON Strings to a Friendly Readable Format, View JSON in table or Grid">
     <meta name="keywords"
-        content="json grid,jsongrid,json grid viewer,json to table,json2table, format json online, json formatter, json formatter online, online json formatter, json validator, format json, json, json beautifier, json beautify, json format, jsonlint, json editor online, json parser, json parser online, json tools,online json editor,online json parser, json editor, json viewer,validate json">
+        content="json viewer,json to table,json2table, format json online, json formatter, json formatter online, online json formatter, json validator, format json, json, json beautifier, json beautify, json format, jsonlint, json editor online, json parser, json parser online, json tools,online json editor,online json parser, json editor, json viewer,validate json">
     <style>
         @import url("https://fonts.googleapis.com/css?family=Lato:400,700,400italic");
 
@@ -1402,7 +1402,7 @@
                 </a><button _ngcontent-sc14="" type="button" data-toggle="collapse" data-target="#navbarColor01"
                     aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation"
                     class="navbar-toggler"><span _ngcontent-sc14="" class="navbar-toggler-icon"></span></button>
-                <div _ngcontent-sc14="" id="navbarColor01" class="collapse navbar-collapse">
+                <div _ngcontent-sc14="" id="navbarColor01" class="collapse navbar-collapse" style="right: 0;position: absolute;">
 
                   
                     <div _ngcontent-sc14="" class="theme-view"><p-button _ngcontent-sc14=""
@@ -1456,7 +1456,6 @@
     </app-root>
     <script src="https://www.nguyenda.com/tools/json/js/runtime.cae6f6a21d43be96.js" type="module"></script>
     <script src="https://www.nguyenda.com/tools/json/js/polyfills.1d259f5b562c1347.js" type="module"></script>
-    <script src="https://www.nguyenda.com/tools/json/js/main.548de21ee8a66a40.js" type="module"></script>
 
     <script src="https://www.nguyenda.com/tools/json/js/main.js?v=1" type="module"></script>
 </body>
