--- a/tools/json/index.html
+++ b/tools/json/index.html
@@ -619,7 +619,7 @@
     <link rel="stylesheet" id="bootstrapThemeCss" href="https://www.nguyenda.com/tools/json/css/bootstrap.dark.min.css"
         media="print" onload="this.media='all'">
     <noscript>
-        <link rel="stylesheet" href="assets/css/bootstrap.dark.min.css">
+        <link rel="stylesheet" href="https://www.nguyenda.com/tools/json/css/bootstrap.dark.min.css">
     </noscript>
     <style>
         @-webkit-keyframes fa-beat {
