--- a/pdf_privacy.html
+++ b/pdf_privacy.html
@@ -1,6 +1,6 @@
 ---
 title: NoAD PDF
-layout: default
+layout: tool
 description: Privacy Policy for NoAD PDF Android mobile Application
 header-img: "img/tag-bg.jpg"
 ---
