--- a/tools/json/index.html
+++ b/tools/json/index.html
@@ -1034,7 +1034,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.31.1/theme-dawn.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ClientJS/0.2.1/client.min.js"></script>
 
-    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+
 
     <style>
         nav {
@@ -1420,36 +1420,13 @@
                 </div>
             </nav><p-dialog _ngcontent-sc14="" header="Welcome" class="p-element ng-tns-c11-2"><!----></p-dialog>
         </app-header>
-        <div _ngcontent-sc16="" class="json-grid-editor-container"><json-grid-editor _ngcontent-sc16=""
-                id="jsonGridEditor"></json-grid-editor></div><router-outlet
-            _ngcontent-sc16=""></router-outlet><app-content-all-in-one _nghost-sc1="" class="ng-star-inserted">
-            <div _ngcontent-sc1="" class="container page-desc">
-                <div _ngcontent-sc1="" class="sub-container">
-                    <h1 _ngcontent-sc1="" class="text-h1"> JSONGrid - All-in-One Json Solution Online </h1>
-                    <h2 _ngcontent-sc1="" class="text-h2"> We make Json easy for you! </h2>
-                    <div _ngcontent-sc1="" class="container keyword-content">
-                        <div _ngcontent-sc1="" class="row"></div>
-                    </div>
-                    <div _ngcontent-sc1="" class="link-container"><a _ngcontent-sc1="" href="/" role="button"
-                            class="btn btn-primary"><i _ngcontent-sc1=""
-                                class="fas fa-external-link-alt"></i>&nbsp;All-in-One</a><a _ngcontent-sc1=""
-                            href="/json-grid" role="button" class="btn btn-primary"><i _ngcontent-sc1=""
-                                class="fas fa-external-link-alt"></i>&nbsp;Json Grid</a><a _ngcontent-sc1=""
-                            href="/json-formatter" role="button" class="btn btn-primary"><i _ngcontent-sc1=""
-                                class="fas fa-external-link-alt"></i>&nbsp;Json Formatter</a><a _ngcontent-sc1=""
-                            href="/json-validator" role="button" class="btn btn-primary"><i _ngcontent-sc1=""
-                                class="fas fa-external-link-alt"></i>&nbsp;Json Validator</a><a _ngcontent-sc1=""
-                            href="/json-viewer" role="button" class="btn btn-primary"><i _ngcontent-sc1=""
-                                class="fas fa-external-link-alt"></i>&nbsp;Json Viewer</a><a _ngcontent-sc1=""
-                            href="/json-parser" role="button" class="btn btn-primary"><i _ngcontent-sc1=""
-                                class="fas fa-external-link-alt"></i>&nbsp;Json Parser</a></div>
-                </div>
+        <div _ngcontent-sc16="" class="json-grid-editor-container">
+            <json-grid-editor _ngcontent-sc16=""
+                id="jsonGridEditor"></json-grid-editor>
             </div>
-        </app-content-all-in-one><!----><app-footer _ngcontent-sc16="" _nghost-sc15="">
-            <div _ngcontent-sc15="" class="container">
-                <p _ngcontent-sc15="">Copyright © 2024 JsonGrid. All rights reserved.</p>
-            </div>
-        </app-footer><p-dialog _ngcontent-sc16="" class="p-element ng-tns-c11-0"><!----></p-dialog><p-toast
+        <router-outlet _ngcontent-sc16=""></router-outlet>
+            
+        <p-dialog _ngcontent-sc16="" class="p-element ng-tns-c11-0"><!----></p-dialog><p-toast
             _ngcontent-sc16="" class="p-element ng-tns-c13-1">
             <div class="ng-tns-c13-1 p-toast p-component p-toast-center"><!----></div>
         </p-toast>
