--- a/tools/pdf/privacy.html
+++ b/tools/pdf/privacy.html
@@ -1,14 +1,15 @@
 ---
-title: NoAD PDF
-layout: tool
+layout: 	page
+title: 		NoAD PDF
 description: Privacy Policy for NoAD PDF Android mobile Application
 header-img: "img/tag-bg-o.jpg"
+header-mask: 0.6
 ---
 
 <!-- Main Content -->
-<div class="container">
+<div class="en post-container">
 	<div class="row">
-		<div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+		
 
 			<strong>Privacy Policy</strong>
 <p>This privacy policy applies to the NoAD PDF app (hereby referred to as "Application") for mobile devices that was
@@ -47,6 +48,5 @@ header-img: "img/tag-bg-o.jpg"
 <p>If you have any questions regarding privacy while using the Application, or have questions about the practices,
 	please contact the Service Provider via email at nguyenda.com.</p>
 <hr>
-		</div>
 	</div>
 </div>
