--- a/tools/pdf/privacy.html
+++ b/tools/pdf/privacy.html
@@ -1,8 +1,10 @@
 ---
-layout: page
-description: Privacy Policy for <strong>NoAD PDF</strong> Android mobile Application
+title:		NoAD PDF
+layout: 	default
+description: Privacy Policy for NoAD PDF> Android mobile Application
 header-img: "img/tag-bg-o.jpg"
 header-mask: 0.6
+no-nav:		true
 ---
 
 <!-- Main Content -->
