--- a/tools/pdf/privacy.html
+++ b/tools/pdf/privacy.html
@@ -4,15 +4,18 @@ layout: 	default
 description: Privacy Policy for NoAD PDF> Android mobile Application
 header-img: "img/tag-bg-o.jpg"
 header-mask: 0.6
-no-nav:		true
+nonav:		true
 ---
 
 <!-- Main Content -->
 <div class="en post-container">
 	<div class="row">
-
+		<div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
 
 		<strong>Privacy Policy</strong>
+
+		<img src="https://lh3.googleusercontent.com/UMvviRCWqy22Bdx5j6Pb5gHNw3FDTAcOa-LzwlNzL9spktHKKTwpeyO-USlfvQeLyC4" alt="Ảnh nổi bật">
+
 		<p>This privacy policy applies to the NoAD PDF app (hereby referred to as "Application") for mobile devices that
 			was
 			created by NoAD (hereby referred to as "Service Provider") as a Free service. This service is intended for
@@ -68,5 +71,6 @@ no-nav:		true
 			practices,
 			please contact the Service Provider via email at nguyenda.com.</p>
 		<hr>
+		</div>
 	</div>
 </div>
