update tool json remove header

--- a/tools/c/ascii.html
+++ b/tools/c/ascii.html
@@ -1,4 +1,19 @@
-<pre><code>+----+-----+----+-----+----+-----+----+-----+
+<html>
+
+<head>
+        <!-- Google tag (gtag.js) - nguyenda.com -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-VEP0CTE9MS"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag() { dataLayer.push(arguments); }
+            gtag('js', new Date());
+    
+            gtag('config', 'G-VEP0CTE9MS');
+        </script>
+</head>
+
+<body>
+    <pre><code>+----+-----+----+-----+----+-----+----+-----+
 | Hx | Chr | Hx | Chr | Hx | Chr | Hx | Chr |
 +----+-----+----+-----+----+-----+----+-----+
 | 00 | NUL | 20 | SPC | 40 |  @  | 60 |  `  |
@@ -35,3 +50,6 @@
 | 1F | US  | 3F |  ?  | 5F |  _  | 7F | DEL |
 +----+-----+----+-----+----+-----+----+-----+
 </code></pre>
+</body>
+
+</html>
