--- a/tool.html
+++ b/tool.html
@@ -11,14 +11,14 @@ header-mask: 0.6
     <p>Tools for software development.</p>
 
     <ul>
+        <li><a href="/tools/json">JSON Tools</a></li>
         <li>Charater Tools</li>
         <li>Encrypt/Decrypt Tools</li>
         <li>Images Tools</li>
-        <li><a href="/tools/qr/read">QR Tools</a></li>
+        <li><a href="/tools/qr/read">Read QR Tools</a></li>
         <li>...</li>
     </ul>
 </div>
-
 
 
 
