--- a/tools/index.html
+++ b/tools/index.html
@@ -1,7 +1,11 @@
 ---
-layout: tool
+layout: page
+title: "Tools"
+description: "Tools for software development"
+header-img: img/bg/toolbg.png
+header-mask: 0.6
+nonav: true
 ---
-
 
 <div class="en post-container">
 
@@ -16,3 +20,11 @@ layout: tool
         <li>...</li>
     </ul>
 </div>
+
+
+
+
+
+
+
+
