--- a/tools/pdf/privacy.html
+++ b/tools/pdf/privacy.html
@@ -28,7 +28,7 @@ nonav:		true
 		<div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
 
 		
-		<img src="app_store_icon.png">
+		<img src="/tools/pdf/app_store_icon.png">
 
 		<p></p>
 
