--- a/tools/json/index.html
+++ b/tools/json/index.html
@@ -1089,7 +1089,7 @@
     </noscript>
     <style ng-transition="serverApp">
         .json-grid-editor-container[_ngcontent-sc16] {
-            height: calc(100vh - 46px);
+            height: 100vh;
             width: 100%
         }
 
